<resources>
    <string name="app_name">Done List</string>
    <string name="add_cause">Add cause</string>
    <string name="share">SHARE</string>
    <string name="preview">PREVIEW</string>
    <string name="description">DESCRIPTION</string>
    <string name="title">TITLE</string>
    <string name="must_be_filled">Field title must be filled</string>
    <string name="send_cause">Done List sharing</string>
    <string name="send_report">Send cause via!</string>
    <string name="choose_date">Choose date</string>
    <string name="new_done">New Done</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="don_t_have_an_account_tv_text">DON`T HAVE AN ACCOUNT?</string>
    <string name="sign_up_tv_text">SIGN UP</string>
    <string name="log_in_with_social_tv_text">LOG IN WITH SOCIAL</string>
    <string name="log_in_with_login_password_tv_text">LOG IN WITH USERNAME</string>
    <string name="fielt_cannot_be_empty">Заполните поле</string>
    <string name="sign_in">SIGN IN</string>
    <string name="already_have_an_account_tv_text">ALREADY HAVE AN ACCOUNT?</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="email">EMAIL</string>
    <string name="full_name">FULL NAME</string>
    <string name="sign_up">Sign up</string>
    <string name="something_goes_wrong">Something goes wrong!</string>
    <string name="something_goes_wrong_check_info">Check email and password</string>
    <string name="password_length_6_symbols">you need input min 6 sybols</string>

    <string name="facebook_app_id">356776214680167</string>
    <string name="fb_login_protocol_scheme">fb356776214680167</string>
    <string name="auth_failed">Authentication failed!</string>
    <string name="auth_success">Authentication success!</string>
    <string name="_25_june_2016">25 June 2016</string>


    <string name="transition_name_title">transition:TITLE</string>
    <string name="transition_name_description">transition:DESCRIPTION</string>
    <string name="transition_name_date">transition:DATE</string>
    <string name="transition_name_fab">transition:FAB</string>
    <string name="transition_name_image">transition:IMAGE</string>

    <string name="create_new_done">Create new Done</string>
    <string name="input_cause_details">Input Cause details</string>
    <string name="you_are_not_authorized">You are not authorized</string>
    <string name="no_dones_yet">No dones yet</string>
    <string name="delete_cause">Delete cause</string>
    <string name="are_you_sure_cause">\t\tAre you sure you want to delete this cause?</string>
    <string name="are_you_sure_done">\t\tAre you sure you want to delete this done?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="sign_in_small">Sign In</string>
    <string name="submit">SUBMIT</string>
    <string name="no_internet_retry">No internet connection</string>
    <string name="no_records_yet">No records yet</string>
</resources>
