<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/window_padding">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/times_logo" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_type_container">

        <include
            layout="@layout/login_with_social"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/login_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_type_container"
        android:gravity="bottom"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/edit_text_color_dark">

            <donelist.lerndroid.com.donelist.custom_views.AvenirBookEditText
                android:id="@+id/fragment_login_user_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColor="@color/edit_text_color_dark"
                android:textColorHint="@color/edit_text_color_dark" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/edit_text_color_dark">

            <donelist.lerndroid.com.donelist.custom_views.AvenirBookEditText
                android:id="@+id/fragment_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/edit_text_color_dark"
                android:textColorHint="@color/edit_text_color_dark" />

        </android.support.design.widget.TextInputLayout>

        <donelist.lerndroid.com.donelist.custom_views.AvenirBookButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="@dimen/sign_in_button_top_margin"
            android:background="@color/colorAccent"
            android:text="@string/sign_in_button_text"
            android:textColor="@color/white"
            android:textSize="@dimen/sign_in_button_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_type_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/have_no_acc_top_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <donelist.lerndroid.com.donelist.custom_views.AvenirBookTextView
            android:id="@+id/fragment_login_login_with_social_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_with_social_tv_text"
            android:textColor="@color/edit_text_hint_color"
            android:textSize="@dimen/sign_in_button_size" />

        <donelist.lerndroid.com.donelist.custom_views.AvenirBookTextView
            android:id="@+id/fragment_login_sign_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_tv_text"
            android:textColor="@color/edit_text_color_dark"
            android:textSize="@dimen/sign_in_button_size" />

    </LinearLayout>

</RelativeLayout>