<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/new_cause_edit_image_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_fab_check" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/card_view_bottom_padding"
                android:paddingLeft="@dimen/card_view_left_right_padding"
                android:paddingRight="@dimen/card_view_left_right_padding"
                android:paddingTop="@dimen/card_view_top_padding">


                <donelist.lerndroid.com.donelist.custom_views.AvenirBookTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_cause_details"
                    android:textSize="@dimen/dialog_titile_text_size"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <donelist.lerndroid.com.donelist.custom_views.AvenirBookEditText
                        android:id="@+id/new_cause_title_ed"
                        style="@style/MyEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/edit_text_color_dark"
                        android:textColorHint="@color/edit_text_color_dark" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <donelist.lerndroid.com.donelist.custom_views.AvenirBookEditText
                        android:id="@+id/new_cause_description_ed"
                        style="@style/MyEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/edit_text_color_dark"
                        android:textColorHint="@color/edit_text_color_dark" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:id="@+id/new_cause_photo_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_cause_photo" />

        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
